--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,15 @@ header{
     margin-bottom: 40px;
 }
 .headerProductos{
-    margin: 0%;
+    width: 100%;
 }
 .logoPrincipal{
     width: 230px;
     height: 200px;
     margin: 25px 0;
+}
+.logoPrincipal:hover {
+    transform: scale(1.2);
 }
 
 
@@ -326,74 +329,20 @@ nav div a:hover{
 }
 
 
+/*estilo del carrusel*/
+
+.img-carousel{
+    width: 100%;
+    height: 60vh;
+}
+
+
 /*estilo del submenu productos*/
 
-.menuSecundario{
-    display: flex;
-    position: sticky;
-    top: 0;
-    width: 100%;
-    justify-content: center;
-    background: green;    
-}
-.menuSecundario a{
-    text-decoration: none;
-    color: whitesmoke;
+.lista{
     padding: 10px;
-    font-family: 'Abel', sans-serif;
-    font-size: 18px;
-    margin: 0px;
+    margin: 30px 0;
 }
-.menuSecundario a:hover{
-    background: rgb(65, 163, 65);
-}
-
-
-/*estilo del buscador*/
-
-.buscador{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    height: 200px;
-    margin: 0px;
-    padding: 5px;
-    background-image: url(../img/background.image/Foto-dietéticas.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.buscador input{
-    position: absolute;
-    width: 0px;
-    height: 0px;
-    margin: 20px;
-    padding: 0px 20px;
-    font-family: 'Abel', sans-serif;
-    font-size: 18px;
-    color: black;
-    outline: none;
-    border: none;
-    border-radius: 20px;
-    transition: all 0.3s ease;
-}
-.buscador:hover input{
-    width: 280px;
-    height: 35px;
-    border: 1px solid rgb(73, 92, 73);
-}
-.buscador input:focus{
-    width: 300px;
-}
-.logoBuscar{
-    position: absolute;
-    width: 55px;
-    height: 55px;
-    line-height: 55px;  
-    right: 0;
-}
-
 
 
 /*estilo del H1 de productos*/
@@ -412,49 +361,22 @@ nav div a:hover{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border-bottom: 3px solid #59CE8F;
 }
 
 
 /*estilos de la lista de productos*/
 
-.productos img{
-    width: 200px;
+.main-productos{
+    padding-right: 0;
 }
 .productos{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 50px 0;
-}
-.cuadro{
-    margin: 30px 30px;
-    padding: 0px;
-    font-family: 'Abel', sans-serif;
-    text-align: center;
-    border-style: outset;
+    margin: 30px 0;
 }
 .tarjeta{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     margin: 30px 30px;
     padding: 0px;
     font-family: 'Abel', sans-serif;
-    text-align: center;
-    border-style: outset;
-}
-.subname{
-    display: flex;
-    flex-direction: column;
-    background: rgb(13, 13, 97);
-    height: 30px;
-    width: 200px;
-    padding: 5px;
-    font-family: 'Abel', sans-serif;
-    font-size: 20px;
-    color: whitesmoke;
-    text-align: center;
-    font-weight: bold;  
 }
 
 
@@ -575,7 +497,9 @@ footer {
 
 
 
+
 /* Media Queries */
+
 
 
 @media screen and (max-width: 800px) {
@@ -586,11 +510,8 @@ footer {
         display: flex;
         flex-direction: row;
     }
-    .buscador{
-        height: auto;
-    }
-    .buscador input{
-        display: none;
+    .img-carousel{
+       height: auto;    
     }
     nav ul li{
         display: flex;
@@ -620,6 +541,11 @@ footer {
         margin: 5px;
     }
 
+    /* Productos */
+
+    .lista{
+        width: 100%;
+    }
 
      /* La Tienda */
 
