--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,16 @@ header{
     align-items: center;
     margin-bottom: 40px;
 }
+.headerIndex{
+    border-top: 20px solid #34626c6e;
+}
 .headerProductos{
     width: 100%;
 }
 .logoPrincipal{
     width: 230px;
     height: 200px;
-    margin: 25px 0;
+    margin: 40px 0;
 }
 .logoPrincipal:hover {
     transform: scale(1.2);
@@ -36,11 +39,11 @@ header{
 
 .mainHome{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
     grid-template-rows: 20% 80% ;
     grid-template-areas:
-                        "h1 h1 h1"
-                        "img-1 img-2 img-3";
+                        "h1 h1 h1 h1"
+                        "img-1 img-2 img-3 img-4";
     justify-items: center;
     align-items: center;
 }
@@ -49,12 +52,21 @@ header{
     height: 80%;
 }
 .menuNav{
-    width: 100%;  
+    width: 100%;
 }
+
+/*estilo del carrusel*/
+
+.img-carousel{
+    width: auto;
+    height: 60vh;
+}
+
 
 /*estilo del H1 del index*/
 .h1Inicio{
     grid-area: h1;
+    margin: 40px 0;  
 }
 .estiloH1Inicio{
     text-align: center;
@@ -66,50 +78,34 @@ header{
 
 .imgIndex1{
     grid-area: img-1;
-    justify-self: end;
-    width: 50%;
-    height: 80%;
-    margin: 30px 30px;
-    padding: 0px;
-    font-family: 'Abel', sans-serif;
-    font-size: 90%;
+    justify-self: center;
+    width: 55%;
     text-align: center;
-    border-style: outset;
-}
-.imgIndex1 img{
-    width: 95%;
-    height: 75%;
 }
 .imgIndex2{
     grid-area: img-2;
-    width: 50%;
-    height: 80%;
-    margin: 30px 30px;
-    padding: 0px;
-    font-family: 'Abel', sans-serif;
-    font-size: 90%;
+    justify-self: center;
+    width: 75%;
     text-align: center;
-    border-style: outset;
-}
-.imgIndex2 img{
-    width: 95%;
-    height: 75%;
 }
 .imgIndex3{
     grid-area: img-3;
-    justify-self: start;
-    width: 50%;
-    height: 80%;
-    margin: 30px 30px;
-    padding: 0px;
-    font-family: 'Abel', sans-serif;
-    font-size: 90%;
+    justify-self: center;
+    width: 55%;
     text-align: center;
-    border-style: outset;
 }
-.imgIndex3 img{
-    width: 95%;
-    height: 75%;
+.imgIndex4{
+    grid-area: img-4;
+    justify-self: center;
+    width: 55%;
+    text-align: center;
+}
+.h3Index{
+    font-size: 1.5rem;
+}
+.animacionCard:hover {
+    transform: scale(1.3);
+    box-shadow: 2px 2px 10px rgba(75, 72, 72, 0.24);
 }
 
 
@@ -302,44 +298,31 @@ header{
 nav{
     display: flex;
     width: 100%;
-    background-color: black;
-    padding: 10px;
-    justify-content: center;   
+    padding-top: 10px;
+    justify-content: center;
+}
+.indexNav{
+    background-image: linear-gradient(to right, #34626C, black);
 }
 nav ul li{
     display: inline-block;
 }
-nav ul li a{
+.indexNav ul li a{
     text-decoration: none;
     color: whitesmoke;
     padding: 10px;
-    background-color: black;
     font-family: 'Abel', sans-serif;
     font-size: 18px;
     margin: 0px;
 }
 nav ul li a:hover{
-    background: rgb(47, 116, 47);
+    background: rgb(126, 189, 87);
 }
-nav div a{
-    text-decoration: none;
-    color: whitesmoke;
-    padding: 10px;
-    background-color: black;
-    font-family: 'Abel', sans-serif;
-    font-size: 18px;
-    margin: 0px;
+.indexNav ul li a:hover{
+    background: #60A9A6;
 }
 nav div a:hover{
-    background: rgb(47, 116, 47);
-}
-
-
-/*estilo del carrusel*/
-
-.img-carousel{
-    width: 100%;
-    height: 60vh;
+    background: rgb(104, 122, 104);
 }
 
 
@@ -423,6 +406,9 @@ nav div a:hover{
     font-family: 'Abel', sans-serif;
     font-size: 20px;
 }
+.ubicacion p {
+    margin-top: 20px;
+}
 .ubicacion img{
     width: 50px;
     height: 60px; 
@@ -475,6 +461,7 @@ footer {
 }
 .h2Pago{
     margin-bottom: 10px;
+    font-size: 1.5rem;
 }
 .logoPago img{
     width: 72px;
@@ -500,6 +487,7 @@ footer {
 }
 .h2Posicion{
     margin: 34px 0px 5px 10px;
+    font-size: 1.5rem;
 }
 .logoStyle{
     font-size: 17px;
@@ -524,18 +512,21 @@ footer {
 
     .menuNav{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: auto;
+    }
+    .indexNav ul{
+        display: flex;
+        flex-wrap: nowrap;
+        width: auto;
     }
     .img-carousel{
        height: auto;    
     }
-    nav ul li{
-        display: flex;
-        flex-direction: column;
-    }
-    .indexNav{
-        justify-content: start;
-        width: auto;
+    .indexNav ul li a {
+        width: 80%;
+        height: auto;
     }
     .mainHome{
         display: flex;
